# oh-my-dockers

./: .cursorignore  .gitignore  Cargo.toml  MANUAL.md  README.md  REFACTOR_SUMMARY.md  TEST_REPORT.md  TEST_RESULTS.md  Taskfile.yml  config.toml  docker-compose-caddy.yml  test.sh  test_compose_file.sh
.cursor/commands/: commit.md
.cursor/rules/: language.mdc  time.mdc
caddy/: Caddyfile
caddy/certs/: README.md
caddy/projects/: .gitkeep
docs/: MANUAL.ja.md  MANUAL.md  MANUAL.zh.md
examples/: README.md  docker-compose.yml  omd.toml
init/chroma/: README.md
init/postgres/: README.md  create_n8n.sql
init/redis/: README.md  redis.conf
projects/: daily.toml  example.toml
projects/daily/: .env.template
projects/example/: .env.template
src/: caddy_manager.rs  cli.rs  config.rs  docker_compose.rs  hosts.rs  init.rs  main.rs  migrate.rs  network.rs  ports.rs  project.rs  proxy.rs  registry.rs
src/caddy/: config.rs  manager.rs  mod.rs  proxy.rs
src/config/: migration.rs  mod.rs
src/docker/: compose.rs  mod.rs  network.rs
src/project/: caddy.rs  commands.rs  compose.rs  compose_generator.rs  config.rs  init.rs  mod.rs  registry.rs
src/system/: hosts.rs  mod.rs
templates/: chroma.yml  n8n.yml  ollama.yml  postgres.yml  redis.yml  surrealdb.yml
tools/cert/: Cargo.toml
tools/cert/src/: main.rs
tools/hosts/: Cargo.toml  README.md
tools/hosts/src/: diff.rs  generator.rs  main.rs  parser.rs  writer.rs
tools/project-manager/: Cargo.toml
tools/project-manager/src/: caddy.rs  compose.rs  config.rs  main.rs  network.rs
