[workspace]
members = [
    "tools/cert",
    "tools/project-manager",
    "tools/hosts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["oh-my-dockers"]

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
colored = "3.0.0"

