[workspace]
members = [
    "tools/cert",
    "tools/project-manager",
    "tools/hosts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["oh-my-dockers"]

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
colored = "3.0.0"
dirs = "5.0.1"
regex = "1.12.2"
chrono = "0.4.42"

[package]
name = "oh-my-dockers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oh-my-dockers"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
chrono.workspace = true
