[workspace]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["oh-my-dockers"]

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
colored = "3.0.0"
dirs = "6.0.0"
regex = "1.12.2"
chrono = "0.4.42"
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.145"

[package]
name = "oh-my-dockers"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "omd"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
