[package]
name = "project-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "project-manager"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
colored.workspace = true
regex = "1.12.2"
chrono = "0.4.42"

